@@ -1,6 +1,10 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-1/17/08: Changed Tlitxcorr to allow 8Kx8K images.
+1/19/08: Added an On button to the Draw Data Type in model view object edit
+to turn objects back on without having to select Contour/Mesh.
+
+1/19/08: 3dmod creates a new empty object after the user deletes all objects
+to avoid crashes. 
 
 1/13/08: Fixed some problems with Zap window cursor with multiple windows.
 
